src/test/deca/syntax/invalid/lexer/sharp-lex.corr
./src/test/deca/syntax/invalid/lexer/sharp.deca:12:0: token recognition error at: '#w'
